chore: layout for home

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mui/icons-material": "5.14.1",
     "@mui/material": "^5.14.2",
     "@svgr/webpack": "8.0.1",
+    "axios": "^1.4.0",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "20.4.5",
