--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@svgr/webpack": "8.0.1",
     "axios": "^1.4.0",
     "next": "13.4.12",
+    "prettier": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7",
