--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.0.2",
     "@mui/icons-material": "5.14.1",
     "@mui/material": "^5.14.2",
     "@svgr/webpack": "8.0.1",
