chore: home with fake data

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.2",
     "@svgr/webpack": "8.0.1",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "next": "13.4.12",
     "prettier": "^3.0.1",
     "react": "18.2.0",
